# claude-code-course

./: .gitignore  CLAUDE.md  README.md  app.py  prd.md  progress.json  pyproject.toml
.claude/: settings.json
.claude/agents/: frontend-design-validator.md
content/: 01-what-is-claude-code.md  02-how-i-use-it.md  03-getting-started.md  04-the-terminal.md  05-basic-usage.md  06-context-management.md  07-claude-md.md  08-slash-commands.md  09-skills.md  10-mcp.md  11-subagents.md  12-hooks.md  13-plugins.md  14-beyond-coding.md  15-takeaways.md
static/: style.css
templates/: index.html
